rel 0.1.0

* Set timezone in config file
* New config option $config->iquest->wallet_active
* Adding ability to gain coins and buy hints

 
rel 0.0.10