@@ -34,6 +34,10 @@
 ; 
 ;reveal_goal=1
 
+; Set following option for the final clue group. The final clue group should 
+; contain only some congratulation for winning as a clue. 
+;
+;final=1
 
 
 [clue]
@@ -74,9 +78,6 @@
 ;
 ;coin_value=0.5
 
-; Set following option for the final task solution. When it is solved, the contest ends.
-;
-;final=1
 
 
 
@@ -94,6 +95,7 @@
 ;prices=1,2.5,0
 
 ; For each hint specify the clue number the hint is related to.
+; Clues are counted from zero.
 ;
 ;clue_IDs=1,1,3
 
